--- a/fips.yml
+++ b/fips.yml
@@ -7,3 +7,6 @@ policies:
 imports:
   sokol:
     git: https://github.com/scemino/sokol
+  sokol-tools-bin:
+    git: https://github.com/floooh/sokol-tools-bin
+  
