--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_definitions(-D${sokol_backend})
 
 fips_begin_app(mo5 windowed)
-    fips_files(main.c)
+    fips_files(main.c m6809.c)
     sokol_shader(sokol_shaders.glsl ${slang})
     fips_deps(sokol)
 fips_end_app()
