--- a/fips.yml
+++ b/fips.yml
@@ -5,6 +5,8 @@
 policies:
   no_auto_import: true
 imports:
+  fips-imgui:
+    git: https://github.com/fips-libs/fips-imgui.git
   sokol:
     git: https://github.com/scemino/sokol
   sokol-tools-bin:
