--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
 include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
 
 fips_setup()
+fips_import_fips_imgui_imgui()
 
 # just suppress this pesky "missing field initializer warning" for now
 if (FIPS_CLANG OR FIPS_GCC)
