--- a/libs/sokol/CMakeLists.txt
+++ b/libs/sokol/CMakeLists.txt
@@ -2,6 +2,9 @@
 if (SOKOL_USE_EGL_GL)
     add_definitions(-DSOKOL_FORCE_EGL)
 endif()
+if (SOKOL_USE_OPENSLES)
+    add_definitions(-DSAUDIO_ANDROID_SLES)
+endif()
 
 # a dummy library with the system library dependencies
 macro(sokol_system_deps)
@@ -23,7 +26,12 @@ macro(sokol_system_deps)
         endif()
     else()
         if (FIPS_ANDROID)
-            fips_libs(GLESv3 EGL OpenSLES log android)
+            fips_libs(GLESv3 EGL log android)
+            if (SOKOL_USE_OPENSLES)
+                fips_libs(OpenSLES)
+            else()
+                fips_libs(aaudio)
+            endif()
         elseif (FIPS_LINUX)
             if (SOKOL_USE_EGL_GLES3 OR SOKOL_USE_EGL_GL)
                 fips_libs(X11 Xi Xcursor EGL GL m dl asound)
