--- a/fips.yml
+++ b/fips.yml
@@ -8,7 +8,7 @@ imports:
   fips-imgui:
     git: https://github.com/fips-libs/fips-imgui.git
   sokol:
-    git: https://github.com/scemino/sokol
+    git: https://github.com/floooh/sokol
   sokol-tools-bin:
     git: https://github.com/floooh/sokol-tools-bin
 
