--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,30 @@
-# select the 3D backend for sokol_gfx.h and sokol_app.h
-add_definitions(-D${sokol_backend})
+# select the sokol-gfx backend depending on platform
+if(FIPS_EMSCRIPTEN)
+    add_definitions(-DSOKOL_GLES3)
+    set(slang "glsl300es")
+elseif(FIPS_ANDROID)
+    add_definitions(-DSOKOL_GLES3)
+    set(slang "glsl300es")
+elseif(FIPS_WINDOWS)
+    add_definitions(-DSOKOL_D3D11)
+    set(slang "hlsl4")
+elseif(FIPS_OSX)
+    add_definitions(-DSOKOL_METAL)
+    if (FIPS_IOS)
+        set(slang "metal_ios")
+    else()
+        set(slang "metal_macos")
+    endif()
+else()
+    add_definitions(-DSOKOL_GLCORE)
+    if (FIPS_IOS)
+        set(slang "glsl300es")
+    else()
+        set(slang "glsl410")
+    endif()
+endif()
 
+# select the 3D backend for sokol_gfx.h and sokol_app.h
 fips_begin_app(mo5 windowed)
     fips_files(main.c m6809.c m6809.h mo5rom.h mo5.h mo5.c kbd.h data.h fs.c fs.h keybuf.h keybuf.c clock.h clock.c clk.h)
     sokol_shader(sokol_shaders.glsl ${slang})
