--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
       - uses: seanmiddleditch/gha-setup-ninja@master
       - name: prepare
         run: |
@@ -17,7 +17,7 @@ jobs:
           python3 fips set local on
           python3 fips webpage build
       - name: upload-artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@main
         with:
           name: webpage
           path: fips-files/deploy/yame-webpage
@@ -26,11 +26,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
         with:
           repository: scemino/yame_wp
           ssh-key: ${{ secrets.GHACTION_PUSH }}
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@main
         with:
           name: webpage
       - name: "commit and push"
