--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@main
         with:
           repository: scemino/yame_wp
-          ssh-key: ${{ secrets.GHACTION_PUSH }}
+          token: ${{ secrets.GHACTION_PUSH }}
       - uses: actions/download-artifact@main
         with:
           name: webpage
