--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,26 @@ jobs:
           run:  python3 fips build osx-make-debug
         - name: osx-make-release
           run:  python3 fips build osx-make-release
-        - name: Upload Windows package to release
+        - name: Upload mo5 macOS package to release
           uses: svenstaro/upload-release-action@v2
           if: startsWith(github.ref, 'refs/tags/v')
           with:
             repo_token: ${{ secrets.GHACTION_PUSH }}
-            file: ../fips-deploy/yame/osx-make-release/*
+            file: ../fips-deploy/yame/osx-make-release/mo5
+            asset_name: mo5-mac
             tag: ${{ github.ref }}
             overwrite: true
-            file_glob: true
+            file_glob: false
+        - name: Upload mo5-ui macOS package to release
+          uses: svenstaro/upload-release-action@v2
+          if: startsWith(github.ref, 'refs/tags/v')
+          with:
+            repo_token: ${{ secrets.GHACTION_PUSH }}
+            file: ../fips-deploy/yame/osx-make-release/mo5-ui
+            asset_name: mo5-ui-mac
+            tag: ${{ github.ref }}
+            overwrite: true
+            file_glob: false
     linux:
         runs-on: ubuntu-latest
         steps:
@@ -49,15 +60,26 @@ jobs:
           run:  python3 fips build linux-make-debug
         - name: linux-make-release
           run:  python3 fips build linux-make-release
-        - name: Upload Ubuntu package to release
+        - name: Upload mo5 Ubuntu package to release
           uses: svenstaro/upload-release-action@v2
           if: startsWith(github.ref, 'refs/tags/v')
           with:
             repo_token: ${{ secrets.GHACTION_PUSH }}
-            file: ../fips-deploy/yame/linux-make-release/*
+            file: ../fips-deploy/yame/linux-make-release/mo5
+            asset_name: mo5-linux
             tag: ${{ github.ref }}
             overwrite: true
-            file_glob: true
+            file_glob: false
+        - name: Upload mo5-ui Ubuntu package to release
+          uses: svenstaro/upload-release-action@v2
+          if: startsWith(github.ref, 'refs/tags/v')
+          with:
+            repo_token: ${{ secrets.GHACTION_PUSH }}
+            file: ../fips-deploy/yame/linux-make-release/mo5-ui
+            asset_name: mo5-ui-linux
+            tag: ${{ github.ref }}
+            overwrite: true
+            file_glob: false
     emscripten:
         runs-on: ubuntu-latest
         steps:
